# legal-ai-assistant

legal-ai-assistant/: .gitignore  README.md  docker-compose.yml  openclaw-config.md  start.sh
legal-ai-assistant/.monkeycode/: MEMORY.md
legal-ai-assistant/.monkeycode/docs/: ARCHITECTURE.md  (+1 more)
legal-ai-assistant/backend/: API.md  Dockerfile  pom.xml
legal-ai-assistant/database/: full.sql
legal-ai-assistant/docs/: DEPLOYMENT.md  api-v2-plan.md
legal-ai-assistant/frontend/: index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.ts
legal-ai-assistant/law_parser/: .env.example  pyproject.toml
legal-ai-assistant/law_parser/src/law_parser/: __main__.py  main.py
legal-ai-assistant/law_parser/src/law_parser/ai/: __init__.py  classifier.py  client.py  content_reviewer.py  models.py  structure_extractor.py
legal-ai-assistant/law_parser/src/law_parser/db/: __init__.py  writer.py
legal-ai-assistant/law_parser/src/law_parser/parser/: __init__.py  base.py  docx_parser.py  json_parser.py  pdf_parser.py  txt_parser.py
legal-ai-assistant/law_parser/src/law_parser/protocol/: __init__.py  jsonrpc.py  server.py
legal-ai-assistant/law_parser/tests/: test_ai_client.py  test_ai_stages.py  test_db_writer.py  test_jsonrpc.py  test_parser.py
legal-ai-assistant/legal-mcp/: README.md  pyproject.toml
legal-ai-assistant/legal-mcp/legal_mcp/: __init__.py  server.py
legal-ai-assistant/openclaw/: README.md  openclaw.example.json
legal-ai-assistant/scripts/: auto-commit-push.sh  fix-password-hash.sql  import_judgments.py
(+445 files in other folders)
