[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "law-parser"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "pymysql>=1.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
law-parser = "law_parser.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/law_parser"]